--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### My Ignores ###
+/Outputs
+*.xls
+!CodesToCheck*.xls
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
