--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,8 +31,8 @@ jobs:
     
     
     - name: Build with Maven
-      run: mvn -Dsuite=build clean test
-      #mvn -B clean test
+      run: mvn -B clean test
+      #mvn -B clean test mvn -Dsuite=build clean test
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
