--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
             <version>1.5.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.3.1</version>
+<!--            <scope>test</scope>-->
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -122,6 +129,20 @@
                 <version>2.12.0</version>
                 <configuration>
                     <reportVersion>2.20.1</reportVersion>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <fork>true</fork>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
