Добавлено: - Улучшенные RetryAnalyzer и Listener для финальной версии - Улучшенные интерфейсы Screenshootable и Retryable - Буффер для раздельного подсчета повторов у тестов - Комментарии, где не было - Метод рефреша страницы в IntialPage с игнором таймаута - Методы в SetDriver для получения таймаутов
Изменено:
- Удалены излишние/некорректные интерфейсы/абстрактные классы
- Улучшен обмен данными через ApiUiBuffer
- Улучшены селекторы - убрано наследование от абстрактного класса + переведы на статику
- Методы доавления скриншотов в ITestResultManager
- Перемещены некоторые файлы для упрощения ознакомления с основными реализациями
- Некоторые ошибки в старом коде Xls
- Изменена проверка UI в финальном варианте.
--Изменен проверочный объект и способ проверки его наличия
--Улучшена динамическая настройка ожиданий
--Разделены проверочный элемент и параметр запуска RetryAnalyzer
--Исправлены ошибки в проверочном цикле
--Вывод в консоль и текстовые приложения к отчету сделаны более подробными

--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>IfTest</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>org.dmk</groupId>
+    <artifactId>DemoProject</artifactId>
+    <version>1.0</version>
 
     <dependencies>
 
@@ -157,8 +157,8 @@
 
 
     <properties>
-        <aspectj.version>1.9.19</aspectj.version>
         <suite>testng.xml</suite>
+        <aspectj.version>1.9.19</aspectj.version>
         <slf4j.version>1.6.1</slf4j.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
