--- a/pom.xml
+++ b/pom.xml
@@ -11,18 +11,6 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>5.2.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>LATEST</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>LATEST</version>
@@ -48,6 +36,17 @@
 
 
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>LATEST</version>
+        </dependency>
 
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -157,7 +156,7 @@
 
 
     <properties>
-        <suite>testng.xml</suite>
+        <suite>src/main/java/tests/citilink/finalTest/final.xml</suite>
         <aspectj.version>1.9.19</aspectj.version>
         <slf4j.version>1.6.1</slf4j.version>
         <maven.compiler.source>11</maven.compiler.source>
